--- a/dungeon.css
+++ b/dungeon.css
@@ -1242,16 +1242,15 @@ box-shadow: 0 0 5em 2.5em #efe8ac92;
 /*//////////////////////////////// START MONSTERS ||||||||||||||||||||||||||||||||||*/
 
 span.discovered.monster {
-color: #0f0; /* Green, matching your map style */
-font-family: monospace; /* Ensure consistent rendering */
-z-index:3; /* Lift above other spans */
+    color: #0f0; /* Green, matching your map style */
+    font-family: monospace; /* Ensure consistent rendering */
+    z-index: 3; /* Lift above other spans */
+    background-image: url('img/1x1_red.png');
+    background-size: 16px 1px;
+    background-repeat: no-repeat;
+    background-position: top left;
 }
 
-.projectile {
-    color: #0f0;
-    font-family: monospace;
-    z-index:4;
-}
 
 .discovered {
     color: #0f0;
