fixed ranged attack range calculation bug in CombatSystem and extracted magic numbers to consts in LootManagerSystem for easier drop balancing

--- a/dungeon.css
+++ b/dungeon.css
@@ -1249,6 +1249,7 @@ span.discovered.monster {
     background-size: 16px 1px;
     background-repeat: no-repeat;
     background-position: top left;
+    padding-top:1px;
 }
 
 
