--- a/dungeon.css
+++ b/dungeon.css
@@ -828,32 +828,73 @@ li.new-save-game {
         margin-top: 0.625rem; /* ~10px */
     }
 
-#tabs div.inventory-item-wrapper {
-display: flex;
-flex-wrap: wrap;
-flex-direction: row;
--ms-align-content: flex-start;
--webkit-align-content: flex-start;
-align-content: flex-start;
-gap: 0.625rem; /* ~5px */
-width: 100%;
-height: 30rem; /* Keep max height but let content dictate rows */
-padding: 0.625rem; /* Outer padding */
-border: 0.0625rem solid #0f0;
-border-radius: .625rem;
-overflow-y: auto;
-scrollbar-color: #0f0 #111;
-scrollbar-width: thin;
-scrollbar-gutter: stable;
-background: rgba(20, 30, 20, 0.7);
+#inventory-window-wrapper {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 30rem; /* Keep max height but let content dictate rows */
+    
+    border-radius: .625rem;
+    background: rgba(20, 30, 20, 0.7);
+}
+
+
+#inventory-tabs {
+    padding: 0;
+    margin: 0;
+    -moz-border-radius: inherit;
+    -webkit-border-radius: inherit;
+    border-radius: inherit;
+    width: 100%;
+    height: 1.75rem;
+    display: flex;
+    align-content: flex-start;
+    gap: .325rem; /* ~5px */
+}
+
+    #inventory-tabs button {
+        padding: 0.125rem 0.625rem; /* ~2px 10px */
+        cursor: pointer;
+        margin: 0;
+        background: #2c672c;
+        color: #000;
+        border-bottom:none;
+        -moz-border-radius: 0px;
+        -webkit-border-radius: .325rem .325rem 0px 0px;
+        border-radius: .325rem .325rem 0px 0px;
+    }
+        #inventory-tabs button.tab {flex: 12;}
+        #inventory-tabs button.sort {flex: 2;}
+        #inventory-tabs button.active {background: #0f0;}
+
+#tabs #inventory-item-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    -ms-align-content: flex-start;
+    -webkit-align-content: flex-start;
+    align-content: flex-start;
+    gap: 0.625rem; /* ~5px */
+    width: 100%;
+    height: 27.25rem; /* Keep max height but let content dictate rows */
+    padding: 0.625rem; /* Outer padding */
+    border: 0.0625rem solid #0f0;
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 0px 0px .625rem .625rem;
+    border-radius: 0px 0px .625rem .625rem;
+    overflow-y: auto;
+    scrollbar-color: #0f0 #111;
+    scrollbar-width: thin;
+    scrollbar-gutter: stable;
+    background: rgba(20, 30, 20, 0.7);
 }
 
 #tabs div.inventory-item {
 padding: 0;
 display: flex;
 flex-direction: column;
-min-height: 4.25rem; /* ~68px */
-width: 4.25rem; /* ~68px */
+min-height: 4.1rem;
+width: 4.1rem;  
 margin: 0; /* Remove any default margins */
 box-sizing: border-box; /* Include padding/border in height */
 }
@@ -867,8 +908,8 @@ padding: 0;
 }
 
 #tabs p.inventory-slot img.item {
-width: 4rem; /* Match the 64px design */
-height: 4rem; /* Match the 64px design */
+width: 3.85rem; /* Match the 64px design */
+height: 3.85rem; /* Match the 64px design */
 border: 0.0625rem solid #0f0;
 padding: 0;
 margin: 0;
